name:           data-bistring
version:        0.0.0.1
synopsis:       Haskell bitstring library
homepage:       https://github.com/zadarnowski/data-bitstring
category:       Data
stability:      alpha

author:         Patryk Zadarnowski
maintainer:     Patryk Zadarnowski <pat@jantar.org>

copyright:      Copyright (c) 2015 Patryk Zadarnowski

description:

    This library provides a number of efficient implementations
    of a bistring data structure, including a bitstring builder
    with a very efficient O(n×log(n)) monoid implementation.

cabal-version:  >= 1.18
build-type:     Simple
license:        BSD3
license-file:   LICENSE

source-repository head
  type:         git
  location:     https://github.com/zadarnowski/data-bitstring.git

source-repository this
  type:         git
  location:     https://github.com/zadarnowski/data-bitstring.git
  tag:          0.0.0.1

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O3 -fobject-code -fno-warn-unused-do-bind -fno-warn-missing-signatures

  exposed-modules:
    Data.BitString.Builder

  build-depends:
    base        >= 4.8 && < 5,
    bytestring  >= 0.10.6.0,
    ghc-prim    >= 0.4.0.0
